--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "看短剧得收益",
+    "name" : "短剧",
     "appid" : "__UNI__B775680",
     "description" : "",
     "versionName" : "1.0.0",
